<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="loomo"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/app_name"
        tools:visibility="visible" />

    <Button
        android:id="@+id/vlsBut"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:onClick="vlsBut"
        android:text="go ahead"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="@string/vlsBut" />

    <Button
        android:id="@+id/mqttBut"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:onClick="mqttBut"
        android:text="call the lift"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vlsBut"
        tools:text="@string/mqttBut" />

    <Button
        android:id="@+id/qrBut"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="qrBut"
        android:text="scan QR code"
        app:layout_constraintStart_toEndOf="@+id/vlsBut"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="@string/qrBut" />

</android.support.constraint.ConstraintLayout>