<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".save.mqtt">

    <TextView
        android:id="@+id/mqttAct"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="Call Lift Service"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/mqttAct" />

    <TextView
        android:id="@+id/mqttPub"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="nothing published yet"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mqttAct"
        tools:text="@string/mqttPub" />

    <TextView
        android:id="@+id/mqttRec"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:text="nothing received yet"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintStart_toEndOf="@+id/mqttPub"
        app:layout_constraintTop_toTopOf="@+id/mqttPub"
        tools:text="@string/mqttRec" />
</android.support.constraint.ConstraintLayout>